[gd_scene load_steps=31 format=3 uid="uid://di6c7ve8350jp"]

[ext_resource type="Script" path="res://scripts/level_two.gd" id="1_10eie"]
[ext_resource type="Script" path="res://scripts/MarkPlayerPrac.gd" id="3_bwvbf"]
[ext_resource type="Texture2D" uid="uid://csc6es3ftxahc" path="res://assets/Mark (4).png" id="3_rcaco"]
[ext_resource type="Script" path="res://scripts/gameFolder/MarkMutationPart.gd" id="4_ai5m8"]
[ext_resource type="Script" path="res://scripts/AreaBulletCollection.gd" id="5_kb3rd"]
[ext_resource type="Texture2D" uid="uid://163mjw5qyyod" path="res://assets/MarkNose.png" id="5_xctc1"]
[ext_resource type="Shader" path="res://shaders/level_oneback.gdshader" id="6_0k8lj"]
[ext_resource type="Shader" path="res://shaders/MarkEyes.gdshader" id="6_gp7d0"]
[ext_resource type="Texture2D" uid="uid://bq7gwdcrn51bc" path="res://assets/MarkEyes (1).png" id="7_lw5uw"]
[ext_resource type="Script" path="res://scripts/gameFolder/MarkEyes.gd" id="8_1rvwq"]
[ext_resource type="Texture2D" uid="uid://dc3hwl8kqvpc" path="res://assets/S2Background.png" id="8_xfa7c"]
[ext_resource type="Script" path="res://scripts/EndlessWavesSt2.gd" id="9_8cern"]
[ext_resource type="Script" path="res://scripts/gameFolder/MarkBulletHandler.gd" id="9_fw1pu"]
[ext_resource type="PackedScene" uid="uid://cg1tr1w13owj1" path="res://scenes/game_over.tscn" id="9_tvsoy"]
[ext_resource type="PackedScene" uid="uid://co2681xf6dre" path="res://scenes/pause_menu.tscn" id="10_c4mor"]
[ext_resource type="Script" path="res://scripts/game_over_practice.gd" id="11_j34cl"]
[ext_resource type="Script" path="res://scripts/pause_menu_practice.gd" id="12_7tlwg"]
[ext_resource type="PackedScene" uid="uid://ywkm5lhkpww" path="res://scenes/health_bar_red.tscn" id="12_uvx2n"]
[ext_resource type="Script" path="res://scripts/ScoreS1.gd" id="13_c62fy"]
[ext_resource type="Script" path="res://scripts/PopHighscore.gd" id="14_v3axn"]
[ext_resource type="AudioStream" uid="uid://bju8qwut2ca08" path="res://assets/popSFX/happy-pop-3-185288.mp3" id="15_nnk7x"]
[ext_resource type="Texture2D" uid="uid://d3mppwhwsnoru" path="res://assets/S2 Instructions.png" id="17_86h3r"]
[ext_resource type="Texture2D" uid="uid://djk6wt2num5i7" path="res://assets/PopStarLetters.png" id="18_gbjqq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7vwwd"]
shader = ExtResource("6_gp7d0")
shader_parameter/explosiveValue = 0.0
shader_parameter/blandness = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bhj65"]
shader = ExtResource("6_gp7d0")
shader_parameter/explosiveValue = null
shader_parameter/blandness = 0.6

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_o6nwr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ibogi"]
shader = ExtResource("6_0k8lj")
shader_parameter/speedScale = 1.0

[sub_resource type="Animation" id="Animation_620mn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3432.68, -1695.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.36874, 0.36874)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0tmod"]
resource_name = "S1Instructions"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6055.83, -3481.12), Vector2(-3701.15, -1392.45), Vector2(-3701.15, -1392.45), Vector2(-4441.71, -3087.85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.000512153, -0.000512153), Vector2(5.00014, 5.00014), Vector2(5.00014, 5.00014), Vector2(-0.000512142, -0.000512138)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-6.28319, 0.0, 0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43s2g"]
_data = {
"RESET": SubResource("Animation_620mn"),
"S1Instructions": SubResource("Animation_0tmod")
}

[node name="PopStar" type="Node2D"]
scale = Vector2(1.218, 1.218)
script = ExtResource("1_10eie")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.3, 0.3)
zoom = Vector2(0.12, 0.12)

[node name="Mark" type="Node2D" parent="."]

[node name="Player" type="Area2D" parent="Mark" groups=["Player"]]
script = ExtResource("3_bwvbf")

[node name="MarkPlaySprite" type="Sprite2D" parent="Mark/Player"]
z_index = 3
position = Vector2(0, 16.4851)
scale = Vector2(0.503802, 0.503802)
texture = ExtResource("3_rcaco")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mark/Player"]
visible = false
position = Vector2(-5.74713, 0.656803)
polygon = PackedVector2Array(-87.0279, -211.002, -66.5025, -218.391, -114.122, -302.956, 125.616, -302.135, 78.8177, -218.391, 114.943, -201.97, 148.604, -214.286, 180.624, -220.033, 208.539, -220.033, 235.632, -216.749, 254.516, -211.823, 275.041, -203.612, 298.851, -190.476, 321.018, -172.414, 340.722, -148.604, 351.396, -128.9, 359.606, -105.911, 364.532, -76.3547, 363.711, -47.619, 354.68, -4.92611, 335.796, 41.8719, 307.882, 86.2069, 270.936, 131.363, 217.57, 183.908, 145.32, 243.021, 68.1445, 295.566, 6.56814, 334.154, -79.6387, 280.788, -131.363, 243.842, -176.519, 208.539, -224.959, 165.846, -259.442, 130.542, -298.851, 82.1018, -331.691, 25.4516, -348.933, -25.4516, -353.038, -72.2496, -347.291, -107.553, -334.975, -137.11, -319.376, -160.92, -294.745, -184.729, -266.831, -201.149, -243.021, -211.823, -211.002, -219.212, -178.161, -220.854, -147.783, -216.749, -126.437, -211.002, -104.269, -202.791)

[node name="mutationPart" type="Node2D" parent="Mark/Player"]
z_index = 2
z_as_relative = false
position = Vector2(0, 60.9843)
script = ExtResource("4_ai5m8")

[node name="SnoutPosition" type="Node2D" parent="Mark/Player/mutationPart"]
z_index = 2
z_as_relative = false
position = Vector2(1.64204, -269.523)

[node name="MarkNose" type="Sprite2D" parent="Mark/Player/mutationPart"]
z_index = 1
position = Vector2(0, -44)
scale = Vector2(0.504, 0.504)
texture = ExtResource("5_xctc1")

[node name="MarkEye1" type="Sprite2D" parent="Mark/Player/mutationPart"]
z_index = 1
material = SubResource("ShaderMaterial_7vwwd")
position = Vector2(-199.507, -139.802)
scale = Vector2(0.504, 0.504)
texture = ExtResource("7_lw5uw")
script = ExtResource("8_1rvwq")

[node name="MarkEye2" type="Sprite2D" parent="Mark/Player/mutationPart"]
z_index = 1
material = SubResource("ShaderMaterial_bhj65")
position = Vector2(206.897, -140.623)
scale = Vector2(0.504, 0.504)
texture = ExtResource("7_lw5uw")
script = ExtResource("8_1rvwq")

[node name="BulletHandlerSt2" type="Node" parent="Mark"]
script = ExtResource("9_fw1pu")

[node name="AreaBulletCollection" type="Area2D" parent="."]
script = ExtResource("5_kb3rd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(0, 6000)
shape = SubResource("WorldBoundaryShape2D_o6nwr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(-9000, 0)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_o6nwr")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(9000, 0)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_o6nwr")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(0, -6000)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_o6nwr")

[node name="EndlessWavesSt2" type="Node" parent="."]
script = ExtResource("9_8cern")

[node name="GameOver" parent="." instance=ExtResource("9_tvsoy")]
visible = false
script = ExtResource("11_j34cl")

[node name="PauseMenu" parent="." instance=ExtResource("10_c4mor")]
visible = false
script = ExtResource("12_7tlwg")

[node name="HealthBarRed" parent="." instance=ExtResource("12_uvx2n")]
z_index = 7
position = Vector2(2.84217e-14, 720.73)
scale = Vector2(0.658475, 0.658475)

[node name="Score" type="Label" parent="."]
z_index = 5
offset_left = -6013.14
offset_top = 2342.36
offset_right = -2880.14
offset_bottom = 3024.36
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_constants/shadow_outline_size = 120
theme_override_font_sizes/font_size = 500
text = "SCORE: 0 PTS"
script = ExtResource("13_c62fy")
metadata/_edit_use_anchors_ = true

[node name="Highscore" type="Label" parent="."]
z_index = 5
offset_left = -5994.25
offset_top = 3019.7
offset_right = -3707.25
offset_bottom = 3428.7
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_constants/shadow_outline_size = 100
theme_override_font_sizes/font_size = 260
text = "HIGHSCORE: 0 PTS"
script = ExtResource("14_v3axn")
metadata/_edit_use_anchors_ = true

[node name="PopSfxPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_nnk7x")

[node name="SplatchoStage1Background(3)" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_ibogi")
position = Vector2(0, 1.90735e-06)
scale = Vector2(15.2025, 15.2025)
texture = ExtResource("8_xfa7c")

[node name="Stage2Instructions" type="Sprite2D" parent="."]
position = Vector2(-3432.68, -1695.4)
scale = Vector2(0.36874, 0.36874)
texture = ExtResource("17_86h3r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Stage2Instructions"]
libraries = {
"": SubResource("AnimationLibrary_43s2g")
}
autoplay = "S1Instructions"

[node name="PopStarLetters" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(4568.14, 2954.02)
scale = Vector2(3.28164, 3.28164)
texture = ExtResource("18_gbjqq")

[connection signal="area_entered" from="AreaBulletCollection" to="AreaBulletCollection" method="_on_area_entered"]
